--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
         "munafio/chatify": "^1.5",
+        "simplesoftwareio/simple-qrcode": "~4",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
